<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView  
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:text="@string/label_description"
        />
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView  
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/label_height"
            />
        <TextView  
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/label_previous_time"
            />
        <TextView android:id="@+id/label_previous_height"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            />
    </LinearLayout>
    <EditText android:id="@+id/text_height"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:numeric="integer"
        android:maxLength="3"
        android:text="170"
        />
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView  
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/label_weight"
            />
        <TextView  
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/label_previous_time"
            />
        <TextView android:id="@+id/label_previous_weight"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            />
    </LinearLayout>
    <EditText android:id="@+id/text_gender"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:maxLength="3"
        android:text="M" />
    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_calculate" />
    <Button
        android:id="@+id/button_show_next_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_show_next_activity" />
</LinearLayout>
